<resources>
    <string name="app_name">PicFav</string>
    <string name="general_waiting_please_msg">Please waiting…</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="in_progress">In progress…</string>

    <string name="tab_friends">Friends</string>
    <string name="tab_select_game">Select Game</string>
    <string name="tab_challenges">Challenges</string>


    <!--Permissions-->
    <string name="no_permissions">No permissions</string>
    <string name="enable_permission">Please, enable %1$s permission in app settings</string>
    <string name="open_settings">Open Settings</string>
    <string name="cancel">Cancel</string>
    <string name="storage">Storage</string>

    <!--General error-->
    <string name="error_connection_msg">No internet connection</string>
    <string name="error_something_wrong_msg">Something went wrong, try later.</string>

    <!--Login activity-->
    <string name="login_activity_user_name_hint">Username</string>
    <string name="login_activity_password_hint">Password</string>
    <string name="login_activity_login_btn_msg">Log In</string>
    <string name="login_activity_terms_and_condition">I agreed with terms and conditions.</string>
    <string name="login_activity_forgot_password_msg">Forgot your password?</string>
    <string name="login_error_user_name_empty">Please enter your Username.</string>
    <string name="login_error_password_empty">Please enter your Password.</string>

    <!--Welcome activity-->
    <string name="login_title">LOG IN</string>
    <string name="sign_up_title">SIGN UP</string>
    <string name="welcome_title">Do you have good taste?</string>

    <!--Sign Up activity-->
    <string name="sing_up_activity_title">Sign Up</string>
    <string name="username">Username</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="password">Password</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="login_activity_login_title_msg">Log In</string>


    <!--Game activity-->
    <string name="main_next_btn_msg">Next</string>
    <string name="main_choose_title">Choose 3–5</string>
    <string name="main_selected_max_image_msg">Please press Next. You have already selected %d images.</string>
    <string name="main_selected_min_image_msg">Please, You should select more than %d images.</string>
    <string name="main_set_name_preliminary">Preliminary</string>
    <string name="main_remain_count_msg">%d Remain</string>
    <string name="main_round_holder">%d Rd</string>
    <string name="main_first_step_holder">%dst</string>
    <string name="main_second_step_holder">%dnd</string>
    <string name="main_third_step_holder">%drd</string>
    <string name="main_default_step_holder">%dth</string>

    <!--Main activity-->
    <string name="select_game">Select game</string>
    <string name="log_out_title">Do you really want to log out?</string>
    <string name="start">Start</string>


    <!--Result activity-->
    <string name="result_activity_title">PicFav Result</string>
    <string name="game_loading_text">%d%%</string>
    <string name="result_activity_congratulations_msg">Сongratulations!</string>
    <string name="game_list_empty_msg">You don\'t have active game.</string>
    <string name="result_activity_sub_title_msg">Your taste comparing to other people in the world.</string>
    <string name="result_activity_challenge_btn_msg">Go to Challenges</string>


</resources>
