<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/jazzberry_jam">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:text="@string/welcome_title"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/text_size_pre_extreme"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_log_in"
            android:layout_width="match_parent"
            android:layout_height="@dimen/welcome_activity_btns_height"
            android:background="@color/san_felix"
            android:text="@string/login_title"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_size_normal"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_sing_up"
            android:layout_width="match_parent"
            android:layout_height="@dimen/welcome_activity_btns_height"
            android:background="@color/indigo"
            android:text="@string/sign_up_title"
            android:textAppearance="@style/TextAppearance.Normal.Black.14"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_size_normal"
            android:textStyle="bold" />

    </LinearLayout>

</FrameLayout>