<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="newagency.picfav.view.game.view.GameActivity"
    tools:showIn="@layout/activity_game_screen">

    <View
        android:id="@+id/shadow_top"
        android:layout_width="0dp"
        android:layout_height="@dimen/general_shadow_height"
        android:layout_marginBottom="@dimen/main_margin_bottom"
        android:background="@drawable/shadow_bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.gtomato.android.ui.widget.CarouselView
        android:id="@+id/carousel"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clipToPadding="false"
        app:layout_constraintBottom_toTopOf="@+id/shadow_bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/choose_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/Roboto.Normal.Grey.16"
        app:layout_constraintBottom_toTopOf="@+id/shadow_bottom"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="@dimen/main_choose_margin_bottom"
        android:layout_marginEnd="@dimen/main_choose_margin_end"
        android:text="@string/main_choose_title"/>

    <View
        android:id="@+id/shadow_bottom"
        android:layout_width="0dp"
        android:layout_height="@dimen/general_shadow_height"
        android:layout_marginBottom="@dimen/main_margin_bottom"
        android:background="@drawable/shadow_top"
        app:layout_constraintBottom_toTopOf="@+id/next_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:id="@+id/remain_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/main_remain_count_msg"
        android:textAppearance="@style/Roboto.Normal.Black.16"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/next_tv"
        app:layout_constraintStart_toEndOf="@+id/next_tv"
        app:layout_constraintTop_toTopOf="@+id/next_tv" />


    <TextView
        android:id="@+id/next_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:paddingBottom="@dimen/main_next_btn_padding_bottom"
        android:paddingEnd="@dimen/main_next_btn_padding_end"
        android:paddingStart="@dimen/main_next_btn_padding_start"
        android:paddingTop="@dimen/main_next_btn_padding_top"
        android:text="@string/main_next_btn_msg"
        android:textAppearance="@style/Roboto.Normal.Grey.16"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/small_grid_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:padding="@dimen/main_padding_grid"
        android:src="@drawable/ic_small_grid"
        app:layout_constraintBottom_toBottomOf="@+id/next_tv"
        app:layout_constraintEnd_toStartOf="@+id/next_tv"
        app:layout_constraintTop_toTopOf="@+id/next_tv" />

</android.support.constraint.ConstraintLayout>